tests/ui/missing_discriminant.stderr
error: missing discriminator
 --> tests/ui/missing_discriminant.rs:7:5
  |
7 |     NoDiscriminant,
  |     ^^^^^^^^^^^^^^
